--- a/Hearthscience.Rmd
+++ b/Hearthscience.Rmd
@@ -82,7 +82,7 @@ library(VGAM)
 
 We have two types of data: 1) basic card information (attack/health/cost/description of cards) and 2) frequently used decks from top players. 
 
-### Basic Card Information
+### 1. Basic Card Information
 * We collected card data from Hearthstone’s API: http:,, hearthstoneapi.com, Card.  It contains thorough card information of: card name, card set (Basic, Classic, Blackrock Mountain,  Goblins vs Gnomes,  Naxxramas,  Promotion,  The Grand Tournament,  The League of Explorers), card type (minions,  spells,  weapons), player class (Priest,  Hunter,  Warlock,  Shaman,  Warrior,  Mage,  Paladin,  Druid,  Rogue,  All), card description (text), 	mechanics of minions (Battlecry,  Taunt,  Normal,  HealTarget,  Charge,  Aura,  AdjacentBuff,  Spell Damage,  Freeze,  Enrage,  Divine Shield,  Stealth,  Overload,  Deathrattle,  Windfury,  Combo,  Poisonous,  Inspire), attack, health, and cost of cards. We have collected the json file using Python and transfer it into RData (and csv files) using R.
 
 ```{r eval=F warning=F error=F}
@@ -303,7 +303,7 @@ p+geom_bar(stat="identity",width=1)+geom_text(aes(x=1.6,y=pos,label = percent(n/
 qplot(data$cardSet,xlab="rarity",main="Histogram for rarity")+theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
 
-### Correlation of Warlock
+### 2. Correlation of Warlock
 
 #### Pearson Correlation of Cards
 ##### Load Data
